<resources>
    <string name="app_name">FormStudent</string>
    <string name="helper_required">Obligatorio</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="bornDate">Fecha de nacimiento</string>
    <string name="school">Escuela</string>
    <string name="observations">Observaciones</string>
    <string name="accept">Aceptar</string>
    <string name="reset">Refrescar</string>
    <string name="helper_optional">Opcional</string>
    <string name="snackbar_save_succesfull">Se ha guardado la información!</string>
    <string name="snackbar_save_error">Debes rellenar todos los campos obligatorios</string>
    <string name="dateToShow">%1$s/%2$s/%3$s</string>
    <string name="userSaved">Usuario guardado con éxito</string>
    <string name="mustToCompleteFields">Debe rellenar todos los campos obligatorios</string>
    <string name="registerFailed">Fallo en el registro</string>
</resources>